# CNN_para_Controle_de_Qualidade

./: .gitignore  README.md  README_EN.md  main.ipynb  pyproject.toml  requirements.txt
data/: README.md
front_end/: README.md  app.py  requirements.txt
models/: README_models.md
notebooks/: CNNs para Controle de Qualidade.ipynb
src/: build_model.py  data_acquisition.py  preprocess.py  train_model.py
