[project]
name = "cnn-para-controle-de-qualidade"
version = "0.1.0"
description = "Uso de Redes Neurais Convolucionais (CNN) para Controle de Qualidade"
authors = [
    {name = "andrerizzo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
